--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react-scripts": "3.2.0"
   },
   "dependencies": {
+    "moment": "^2.24.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "uuid": "^3.3.3"
